--- a/mean-course/src/app/app.component.html
+++ b/mean-course/src/app/app.component.html
@@ -1,2 +1,6 @@
-<p>first page</p>
+<app-header></app-header>
+
+<main>
 <app-post-create></app-post-create>
+<app-post-list></app-post-list>
+</main>
